--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/open-sans": "^5.0.27",
+    "@fontsource/raleway": "^5.0.17",
+    "@reduxjs/toolkit": "^2.2.2",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
