--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/open-sans": "^5.0.27",
-    "@fontsource/raleway": "^5.0.17",
+    "@fontsource/roboto": "^5.0.12",
     "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "compromise": "^14.13.0",
+    "cors": "^2.8.5",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "upstox-js-sdk": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
