--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^2.2.2",
     "compromise": "^14.13.0",
     "echarts-for-react": "^3.0.2",
