--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
     "@reduxjs/toolkit": "^2.2.2",
-    "compromise": "^14.13.0",
-    "echarts-for-react": "^3.0.2",
+    "chart.js": "^4.4.2",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0"
