--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "chart.js": "^4.4.2",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "eslint": "^8",
