--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
