--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
