I added Google authentication.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #Providers
-GOOGLE_CLIENT_ID=60036429960-2r5hnm2u02dhi72hdn8evf0fpu9j7bls.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=60036429960-61ksib60iqqb11ujuuodougrad0v5esq.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 #Auth Config
 NEXTAUTH_SECRET=secret!JWTrandom65
-NEXTAUTH_URL=https://main.drmb1jyycql3b.amplifyapp.com/
+NEXTAUTH_URL=http://localhost:3000
