--- a/.amplify.yml
+++ b/.amplify.yml
@@ -9,7 +9,7 @@ frontend:
         # This env command will take the GOOGLE_CLIENT_ID, GOOGLE_CLIENT_SECRET, and NEXTAUTH_SECRET
         # secret and then add it to the runtime variables. More info on AWS docs
         # https://docs.aws.amazon.com/amplify/latest/userguide/ssr-environment-variables.html
-        - env | grep -e GOOGLE_CLIENT_ID -e GOOGLE_CLIENT_SECRET-e NEXTAUTH_SECRET >> .env.production
+        - env | grep -e GOOGLE_CLIENT_ID -e GOOGLE_CLIENT_SECRET-e AUTH_SECRET >> .env.production
         - npm run build
   artifacts:
     baseDirectory: .next
