--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.2",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
