I refactored the codebase.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fontsource/roboto": "^5.0.12",
     "chart.js": "^4.4.2",
     "framer-motion": "^11.0.20",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
