--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
     "framer-motion": "^11.0.20",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.17",
@@ -25,6 +27,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
